# speed-insights

./: .gitignore  .pre-commit-config.yaml  README.md  Untitled.ipynb  demo.ipynb  pyproject.toml  report_template.html
.github/workflows/: pythonpackage.yml
speed_insights/: data_loader.py  metrics_calculator.py  model_comparison.py  registry.py  row_selecter.py  speed_insights.py  visualiser.py
src/: data_loader.py  metrics_calculator.py  model_comparison.py  registry.py
tests/: test_data_loader.py  test_model_comparison.py  test_speed_insights.py  test_visualiser.py
