[tool.poetry]
name = "reg-report"
version = "0.1.0"
description = "A package to automate the comparison of regression ML models."
authors = ["Adam Kells <adamjkells93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
